--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
+    <base href="/" />
     <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -86,12 +87,6 @@
       type="text/css"
       href="./assets/css/font-icons.min.css"
     />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="./assets/css/theme-vendors.min.css"
-    />
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/responsive.css" />
     <!-- revolution slider -->
     <link
